commit harmonisation renommages avec bugs dans eval.

--- a/Code/2B - Lancement_modele_gensim.ipynb
+++ b/Code/2B - Lancement_modele_gensim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,24 +40,24 @@
     "from gensim.models import word2vec\n",
     "\n",
     "#os.chdir('C:/Users/torna/Documents/StatApp/StatApp')\n",
-    "os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')\n",
+    "#os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')\n",
     "#os.chdir('/home/aqlt/Documents/Ensae/StatApp')\n",
-    "#os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres/StatApp')\n",
+    "os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres/StatApp')\n",
     "\n",
-    "nom_dossier = \"ens\"\n",
-    "#nom_dossier = \"100k\""
+    "#nom_dossier = \"ens\"\n",
+    "nom_dossier = \"100k\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1348627\n"
+      "99718\n"
      ]
     }
    ],
@@ -78,19 +78,7 @@
     "\n",
     "### Nouvelle simulation \n",
     "\n",
-    "Paramètres fixés : la dimension, le nombre de mots tirés dans le *negative sampling* et la proba utilisé"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if nom_dossier == \"ens\":\n",
-    "    dim = 20 #50\n",
-    "else:\n",
-    "    dim = 20"
+    "Paramètres fixés : le nombre de mots tirés dans le *negative sampling* et la proba utilisé"
    ]
   },
   {
@@ -102,31 +90,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "seeds = [1, 5, 10, 15, 20, 25]\n",
-    "epoch = 10\n",
-    "window = 4\n",
-    "learning_rate = 0.01\n",
-    "numero_simulation = 2"
+    "\n",
+    "# renseigner dans l'ordre : dim, epoch, window, learning_rate\n",
+    "simuls = [(20,10,3,0.01),(50,10,3,0.01)]\n",
+    "\n",
+    "# Rq : numero_simulation n'est plus utilisé désormais ! "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "seed 1  à 23:49 : 1.41\n"
+      "seed 1 à 17:52 : 0.11\n",
+      "seed 5 à 17:52 : 0.11\n",
+      "seed 10 à 17:52 : 0.12\n",
+      "seed 15 à 17:52 : 0.12\n",
+      "seed 20 à 17:53 : 0.13\n",
+      "seed 25 à 17:53 : 0.12\n",
+      "seed 1 à 17:53 : 0.12\n",
+      "seed 5 à 17:53 : 0.12\n",
+      "seed 10 à 17:53 : 0.12\n",
+      "seed 15 à 17:53 : 0.13\n",
+      "seed 20 à 17:53 : 0.12\n",
+      "seed 25 à 17:53 : 0.12\n"
      ]
     }
    ],
    "source": [
+    "for dim, epoch, window, learning_rate in simuls: #suppr\n",
+    "\n",
+    "    for seed in seeds:\n",
+    "\n",
+    "        start = time.time()\n",
+    "\n",
+    "        model = word2vec.Word2Vec(phrases, size=dim, window=window,negative=5,\n",
+    "                                  alpha=learning_rate,min_alpha=learning_rate, seed=seed,\n",
+    "                          min_count=0, workers=4, iter=epoch)\n",
+    "        # Kim : j'ai mis min_count = 0, devons-nous mettre 4 ?\n",
+    "        \n",
+    "        end = time.time()\n",
+    "        # Affichage temps de tournage du modèle\n",
+    "        currentDT = datetime.datetime.now()\n",
+    "        print(\"seed {} à {}:{} : {}\".format(seed, currentDT.hour, currentDT.minute, round((end - start)/60, 2)))\n",
+    "\n",
+    "        # Sauvegarde \n",
+    "        chemin = \"data/{}/gensim/dim{}_ep{}_w{}_lr{}_seed{}\".format(nom_dossier, dim, epoch, window, str(learning_rate)[2:], seed)\n",
+    "        if not os.path.isdir(chemin):\n",
+    "            os.mkdir(chemin)\n",
+    "\n",
+    "        model.save(chemin + \"/word2vec.model\")\n",
+    "\n",
+    "\n",
     "# phrases = les phrases du corpus\n",
     "# size = dimension du vecteur\n",
     "# window = fenetre\n",
@@ -135,50 +159,7 @@
     "# seed \n",
     "# min_count = fréquence min des mots qui nous intéresse\n",
     "# workers = nb de cores sur l'ordi\n",
-    "# iter = nb epoch\n",
-    "\n",
-    "for seed in seeds:\n",
-    "\n",
-    "    start = time.time()\n",
-    "\n",
-    "    model = word2vec.Word2Vec(phrases, size=dim, window=window,negative=5,\n",
-    "                              alpha=learning_rate,min_alpha=learning_rate, seed=seed,\n",
-    "                      min_count=0, workers=4, iter=epoch)\n",
-    "    # Kim : j'ai mis min_count = 0 et non 5 car sinon on obtenait pas le même voc que dans NOTRE modele. a creuser\n",
-    "    \n",
-    "    end = time.time()\n",
-    "    # Affichage temps de tournage du modèle\n",
-    "    currentDT = datetime.datetime.now()\n",
-    "    print(\"seed {} à {}:{} : {}\".format(seed, currentDT.hour, currentDT.minute, round((end - start)/60, 2)))\n",
-    "\n",
-    "    # Sauvegarde \n",
-    "    chemin = \"data/{}/gensim/dim{}_ep{}_lr{}_w{}_seed{}\".format(nom_dossier, dim, epoch, str(learning_rate)[2:], window, seed)\n",
-    "    if not os.path.isdir(chemin):\n",
-    "        os.mkdir(chemin)\n",
-    "\n",
-    "    model.save(chemin + \"/word2vec.model\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'data/ens/gensim/dim20_ep10_lr01_w3_seed25'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chemin = \"data/{}/gensim/dim{}_ep{}_lr{}_w{}_seed{}\".format(nom_dossier, dim, epoch, str(learning_rate)[2:], window, seed)\n",
-    "\n",
-    "chemin"
+    "# iter = nb epoch"
    ]
   },
   {
@@ -186,6 +167,8 @@
    "metadata": {},
    "source": [
     "### Simulation déjà effectuée (faire de nouvelles epoch)\n",
+    "\n",
+    "CETTE PARTIE BUG ET EST A RECODER !\n",
     "\n",
     "Paramètres à modifier :"
    ]
@@ -416,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
