Analyse résultats Kim v1

--- a/Redaction/Rapport_Final/Brouillons/Kim/Analyse_resultats_old/analyse_resultats.tex
+++ b/Redaction/Rapport_Final/Brouillons/Kim/Analyse_resultats_old/analyse_resultats.tex
@@ -151,4 +151,8 @@ Exemple à partir des premières lignes du code d'Alain.
 ## Taille du vocabulaire : 10960
 \end{verbatim}
 
+\begin{verbatim}
+## [[-0.0934065934065934], [0.7615000227827016]]
+\end{verbatim}
+
 \end{document}
