--- a/Redaction/Rapport_Final/Brouillons/Kim/Analyse_resultats_old/analyse_resultats.Rmd
+++ b/Redaction/Rapport_Final/Brouillons/Kim/Analyse_resultats_old/analyse_resultats.Rmd
@@ -27,7 +27,7 @@ citecolor: "#FF0000"
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE,
                         fig.path = "img/markdown-",
-                      cache = TRUE)
+                      cache = FALSE) #TRUE
 options(enable_print_style = FALSE)
 ```
 
@@ -46,7 +46,7 @@ library(reticulate)
 
 Exemple à partir des premières lignes du code d'Alain. 
 
-```{python, echo=FALSE}
+```{python, echo=FALSE, error=TRUE}
 import os
 import string
 import re
@@ -92,7 +92,7 @@ import seaborn as sns
 import gensim
 from gensim.models import word2vec
 
-import rpy2.robjects as r
+#import rpy2.robjects as r
 
 
 #os.chdir('C:/Users/torna/Documents/StatApp/StatApp')
@@ -122,7 +122,7 @@ print("Taille du vocabulaire :", len(vocabulary))
 fdist = nltk.FreqDist(words)
 
 def cos_distance(u, v):
-    return (np.dot(u, v)  / (math.sqrt(np.dot(u, u)) *  (math.sqrt(np.dot(v, v)))))
+    return (np.dot(u, v)  / (math.sqrt(np.dot(u, u)) * (math.sqrt(np.dot(v, v)))))
 
 def eucl_distance(u, v):
     return (1/(np.linalg.norm(u/np.dot(u, u)-v/np.dot(v, v)))+1)
@@ -163,7 +163,7 @@ def corr_modele(chemin, distance="cos", gensimbool = gensim_utile, epoch_max = 5
                 py_list.append(model.wv[mot].tolist())   
             mat_finale = torch.FloatTensor(py_list)
             mot_poids = {index_mot[index]: poids.detach().numpy() for (index, poids) in enumerate(mat_finale)}
-            df = pd.read_csv('data_bis/word_similarity.csv', sep=";")
+            df = pd.read_csv('C:/Users/Kim Antunez/Documents/Projets_autres/StatApp/data_bis/word_similarity.csv', sep=";")
             df["corr_word2vec"] = distance_mots_v(df["word1"],df["word2"], mot_poids, distance)
             df = df.dropna()
             corr, p_value = spearmanr(df["corr"], df["corr_word2vec"])
@@ -180,7 +180,7 @@ def corr_modele(chemin, distance="cos", gensimbool = gensim_utile, epoch_max = 5
                         output = pickle.load(f)
                     mat_finale = (input+output)/2
                     mot_poids = {index_mot[index]: poids.detach().numpy() for (index, poids) in enumerate(mat_finale)}
-                    df = pd.read_csv('data_bis/word_similarity.csv', sep=";")
+                    df = pd.read_csv('C:/Users/Kim Antunez/Documents/Projets_autres/StatApp/data_bis/word_similarity.csv', sep=";")
                     df["corr_word2vec"] = distance_mots_v(df["word1"],df["word2"], mot_poids, distance)
                     df = df.dropna()
                     corr, p_value = spearmanr(df["corr"], df["corr_word2vec"])
@@ -190,63 +190,54 @@ def corr_modele(chemin, distance="cos", gensimbool = gensim_utile, epoch_max = 5
                     break;     
         
     return([all_cor, all_p_val]);
-```
 
 
-```{python, echo=FALSE}
 def tableau_corr_hji(dim = "\d*", epoch = "\d*", window = "\d*",
                      learning_rate = "\d*", seed = "\d*",
                      distance="cos", index = "seed", gensimbool = gensim_utile):    
     if(isinstance(learning_rate, float)):
         learning_rate = str(learning_rate)[2:]
     if(isinstance(dim, list)):
-        dim = r.r['paste0']("(",r.r['paste0']("(",dim,")",collapse = "|"),")")[0]
+        dim = r['paste0']("(",r['paste0']("(",dim,")",collapse = "|"),")")[0]
     if(isinstance(epoch, list)):
-        epoch = r.r['paste0']("(",r.r['paste0']("(",epoch,")",collapse = "|"),")")[0]
+        epoch = r['paste0']("(",r['paste0']("(",epoch,")",collapse = "|"),")")[0]
     if(isinstance(window, list)):
-        window = r.r['paste0']("(",r.r['paste0']("(",window,")",collapse = "|"),")")[0]
+        window = r['paste0']("(",r['paste0']("(",window,")",collapse = "|"),")")[0]
     if(isinstance(learning_rate, list)):
         learning_rate = [str(lr)[2:] if isinstance(lr, float) else lr for lr in learning_rate]
-        learning_rate = r.r['paste0']("(",r.r['paste0']("(",learning_rate,")",collapse = "|"),")")[0]
+        learning_rate = r['paste0']("(",r['paste0']("(",learning_rate,")",collapse = "|"),")")[0]
     if(isinstance(seed, list)):
-        seed = r.r['paste0']("(",r.r['paste0']("(",seed,")",collapse = "|"),")")[0]
+        seed = r['paste0']("(",r['paste0']("(",seed,")",collapse = "|"),")")[0]
 
     requete_regexp = 'dim{}_ep{}_w{}_lr{}_seed{}'.format(dim, epoch, window, learning_rate, seed)
     if gensimbool:
         gensim_st = "gensim/"
     else:
         gensim_st = ""
-    dossiers = r.r['list.files'](path = 'data/{}/{}'.format(nom_dossier, gensim_st),
-                      pattern = requete_regexp)
+    dossiers = r['list.files'](path = 'C:/Users/Kim Antunez/Documents/Projets_autres/StatApp/data/{}/{}'.format(nom_dossier, gensim_st), pattern = requete_regexp)
     dossiers = [dossiers[i] for i in range(len(dossiers))]
-    #dossiers = r.r['paste0']('data/{}/{}'.format(nom_dossier, gensim_st),dossiers)
-    
     resultats = []
     nom_cols = dossiers
 
     for dossier in dossiers:
-        #nom_cols.append( "dim{}_ep{}_lr{}_w{}".format(simul[0], simul[1], simul[2], str(simul[3])[2:]))
-        #print(nom_cols)
-        resultats.append(corr_modele(chemin = 'data/{}/{}{}'.format(nom_dossier, gensim_st, dossier), 
+        resultats.append(corr_modele(chemin = 'C:/Users/Kim Antunez/Documents/Projets_autres/StatApp/data/{}/{}{}'.format(nom_dossier, gensim_st, dossier), 
                                  distance= distance,gensimbool = gensimbool))
     max_len = max([len(x[0]) for x in resultats])
     for i in range(len(resultats)):
         if(len(resultats[i][0])<max_len):
             resultats[i][0] = resultats[i][0] +[np.nan]*(max_len - len(resultats[i][0]))
             resultats[i][1] = resultats[i][1] +[np.nan]*(max_len - len(resultats[i][1]))
-    #nom_lignes = [re.sub('_seed', 'Seed ', d) if d != "" else "Pas de seed" for d in dossiers ]
-    #nom_lignes = ["Seed " + str(s) for s in seeds]
     dossiers_sep = [string.split('_') for string in dossiers]
-    all_dim = [r.r['grep']("^dim", x, value = True)[0] for x in dossiers_sep]
-    all_dim = [r.r['paste0']("dim=", r.r['gsub']("dim", "", x))[0] for x in all_dim] 
-    all_ep = [r.r['grep']("^ep", x, value = True)[0] for x in dossiers_sep]
-    all_ep = [r.r['paste0']("ep=", r.r['gsub']("ep", "", x))[0] for x in all_ep] 
-    all_w = [r.r['grep']("^w", x, value = True)[0] for x in dossiers_sep]
-    all_w = [r.r['paste0']("w=", r.r['gsub']("w", "", x))[0] for x in all_w] 
-    all_lr = [r.r['grep']("^lr", x, value = True)[0] for x in dossiers_sep]
-    all_lr = [r.r['paste0']("lr=0.", r.r['gsub']("lr", "", x))[0] for x in all_lr] 
-    all_seed = [r.r['grep']("^seed", x, value = True)[0] for x in dossiers_sep]
-    all_seed = [r.r['paste0']("seed=", r.r['gsub']("seed", "", x))[0] for x in all_seed] 
+    all_dim = [r['grep']("^dim", x, value = True)[0] for x in dossiers_sep]
+    all_dim = [r['paste0']("dim=", r['gsub']("dim", "", x))[0] for x in all_dim] 
+    all_ep = [r['grep']("^ep", x, value = True)[0] for x in dossiers_sep]
+    all_ep = [r['paste0']("ep=", r['gsub']("ep", "", x))[0] for x in all_ep] 
+    all_w = [r['grep']("^w", x, value = True)[0] for x in dossiers_sep]
+    all_w = [r['paste0']("w=", r['gsub']("w", "", x))[0] for x in all_w] 
+    all_lr = [r['grep']("^lr", x, value = True)[0] for x in dossiers_sep]
+    all_lr = [r['paste0']("lr=0.", r['gsub']("lr", "", x))[0] for x in all_lr] 
+    all_seed = [r['grep']("^seed", x, value = True)[0] for x in dossiers_sep]
+    all_seed = [r['paste0']("seed=", r['gsub']("seed", "", x))[0] for x in all_seed] 
     
     all_name = [all_dim, all_ep, all_w, all_lr, all_seed]
 
@@ -277,14 +268,13 @@ def tableau_corr_hji(dim = "\d*", epoch = "\d*", window = "\d*",
     all_p_val = all_p_val.pivot(index = "lignes", columns = "colonnes", values = 'values')
     
     # Pour enlever les noms ajouté par la fonction pivot
-    all_cor = all_cor.rename_axis(None, axis=1)  
-    all_cor = all_cor.rename_axis(None, axis=0)
+    all_cor = all_corename_axis(None, axis=1)  
+    all_cor = all_corename_axis(None, axis=0)
     all_p_val = all_p_val.rename_axis(None, axis=1)  
     all_p_val = all_p_val.rename_axis(None, axis=0)
     return([all_cor, all_p_val])
-```
 
-```{python, eval=TRUE, echo=FALSE}
+
 from matplotlib.lines import Line2D
 
 def intervalles_confiance (resultats_hji, distance = "cos"):
@@ -292,7 +282,7 @@ def intervalles_confiance (resultats_hji, distance = "cos"):
     fig = plt.figure(figsize = (12,6))    
     ax = fig.add_axes([0.1, 0.1, 1, 1])
     corr = resultats_hji
-    corr = corr.reindex(index = ['seed=1','seed=5','seed=10','seed=15','seed=20','seed=25'])
+    corr = correindex(index = ['seed=1','seed=5','seed=10','seed=15','seed=20','seed=25'])
     # ax.set_ylim(-0.5,0.6) # seulement si besoin pour faire des graph comparables
     ax.set_xlim(-0.2,len(corr.columns)-1+.2)
 
@@ -318,16 +308,24 @@ def intervalles_confiance (resultats_hji, distance = "cos"):
     plt.xlabel("Simulation avec "+ nom_dossier +" tweets")
     custom_lines=[]
     for i in range(len(colors)):
-        custom_lines.append(Line2D([0], [0], marker='o', color='w',
-                                   label='Scatter',markerfacecolor=colors[i], markersize=10))
+        custom_lines.append(Line2D([0], [0], marker='o', color='w', label='Scatter',markerfacecolor=colors[i], markersize=10))
     ax.legend(custom_lines, ['Seed 1','Seed 5','Seed 10','Seed 15','Seed 20','Seed 25'])
+
+
+corr_modele("C:/Users/Kim Antunez/Documents/Projets_autres/StatApp/data/100k/gensim/dim20_ep10_w3_lr01_seed1", distance="cos", gensimbool = True, epoch_max = 50)
+
+resultats_hji = tableau_corr_hji(learning_rate = [0.01,0.02],
+                       window = [3,4,5], dim = 50, index="seed",
+                       distance = "cos")[0]
+print(resultats_hji)
 ```
 
 
 ```{python, eval=TRUE, echo=FALSE}
-#resultats_hji = tableau_corr_hji(dim = [20,50], learning_rate = 0.01,
-#                       window = 3, epoch = 10, index="seed",
-#                       distance = "cos")[0]
+# Pour mettre dans l'ordre les lignes
+#resultats_hji = resultats_hji.reindex(index = ['seed=1','seed=5','seed=10','seed=15','seed=20','seed=25'])
+
+##Il faut installer pandas 1.0 et tabulate
+#print(resultats_hji)
 #print(resultats_hji.to_markdown())
-#intervalles_confiance(resultats_hji)
 ```
