premières remarques alain

--- a/Redaction/Rapport_Final/Brouillons/Kim/Analyse_resultats_python/evaluation_kim.ipynb
+++ b/Redaction/Rapport_Final/Brouillons/Kim/Analyse_resultats_python/evaluation_kim.ipynb
@@ -30,8 +30,8 @@
     "\n",
     "On teste ici : \n",
     "\n",
-    "- **le nombre d'épochs** : Il y a un effet clair du nombre d'époch, passer de 10 à 100 fait clairement augmenter le score de corrélation. \n",
-    "- **le learning rate** : Le learning rate 0.02 semble donner systématiquement de meilleurs résultats que 0.01\n",
+    "- **le nombre d'épochs** : Il y a un net effet du nombre d'époch : passer de 10 à 100 epochs fait augmenter le score de corrélation. \n",
+    "- **le learning-rate** : Le learning-rate 0.02 semble donner systématiquement de meilleurs résultats que 0.01\n",
     "- **la window** : La taille de la window ne semble pas jouer un rôle majeur, il dépend beaucoup des autres paramètres choisis. Pour 100 epoch et un learning rate de 0.02, c'est la taille de fenêtre simple qui semble en moyenne donner le meilleur résultat mais ce résultat n'est pas significativement meilleur que les autres. "
    ]
   },
@@ -124,8 +124,7 @@
    "source": [
     "## Dimension des vecteurs-mots\n",
     "\n",
-    "On cherche cette fois-ci à évaluer l'effet de la dimension des web-embedding. En théorie projeter les mots dans un espace de dimension plus grand\n",
-    "devrait augmenter la pertinence des mots-vecteurs obtenus. C'est ce que l'on observe en pratique, \n",
+    "On cherche cette fois-ci à évaluer l'effet de la dimension des web-embedding. Augmenter la dimension permettrait de projeter avec plus de précision les mots dans des espaces de dimension plus grand et donc de mieux capter les relations entre les mots. En revanche, une dimension trop élevée pourrait également dégrader la qualité de la projection vectorielle en rajoutant plus de bruit. En pratique, \n",
     "pour toutes les combinaisons de paramètres, on observe une amélioration des résultats obtenus en dimension 50 par rapport en dimension 20. \n"
    ]
   },
@@ -164,7 +163,7 @@
     "\n",
     "- **le nombre d'épochs** : Il ne semble avoir aucun effet sur les résultats obtenus (étrange !)\n",
     "- **le learning rate** : Le learning rate 0.02 donne bien des meilleurs résultats que 0.01 sur 10 epochs, mais sur 100, c'est l'inverse ! (étrange !)\n",
-    "- **la window** : Ce paramètre, comme avec la distance cosinus, n'a toujours pas d'effet. "
+    "- **la window** : Ce paramètre, comme avec la distance cosinus, n'a pas d'effet net mais le paramètre window = 4 semble donner des résultats légèrement meilleurs pour le learning rate = 0.02. "
    ]
   },
   {
@@ -206,7 +205,7 @@
     "\n",
     "Pour aller plus loin, nous devrions également tester d'autres learning rate. En effet, le choix de ce paramètre semble influer beaucoup sur les résultats obtenus. Nous proposons deux tester d'autres valeurs, en particulier 0.005 et 0.03. \n",
     "\n",
-    "De même, il serait intéressant d'analyser les résultats pour dim = 50, afin de voir si, à partir d'une certaine taille de word-embedding, les résultats finissent par \"converger\" vers des valeurs proches. \n",
+    "De même, il serait intéressant d'analyser les résultats pour des dimensions supérieures à 100, afin de voir si, à partir d'une certaine taille de word-embedding, les résultats finissent par se dégrader. \n",
     "\n"
    ]
   }
@@ -227,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
