--- a/Redaction/Rapport_Final/Brouillons/Kim/analyse_simul_gensim/analyse_simul_gensim.ipynb
+++ b/Redaction/Rapport_Final/Brouillons/Kim/analyse_simul_gensim/analyse_simul_gensim.ipynb
@@ -9,26 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Kim Antunez\\Anaconda3\\lib\\site-packages\\statsmodels\\tools\\_testing.py:19: FutureWarning:\n",
-      "\n",
-      "pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os \n",
     "os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres/StatApp/Redaction/Rapport_Final/Brouillons/Kim/Analyse_resultats_python')\n",
-    "%run evaluation_Kim_100k.py\n",
+    "%run modele_100k.py\n",
     "os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres/StatApp/Redaction/Rapport_Final/Brouillons/Kim/Analyse_resultats_python')\n",
-    "%run evaluation_Kim_ens.py"
+    "%run modele_ens.py"
    ]
   },
   {
@@ -133,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Learning rate\n",
+    "### Learning rate\n",
     "\n",
     "Nous venons de voir que le learning rate de 0.02 donnait de meilleur résultats que 0.01 dans les comparaisons que nous avons effecutées précédemment. Voyons désormais à quel point il joue lorsque nous le faisons varier davantage en fixant par exemple le modèle sur l'ensemble des tweets tel que dim = 50, ep = 100 et w = 4. \n",
     "\n",
@@ -326,17 +315,12 @@
     "## Conclusions\n",
     "\n",
     "\n",
-    "Word2Vec a besoin de corpus à la fois volumineux et variés pour créer ses vecteurs de mots. \n",
-    "\n",
     "Ces différentes simulations nous amènent à choisir les paramètres suivants : \n",
     "\n",
-    "- dim = 100 (résultat proche de dim = 300 mais plus rapide à tourner) \n",
-    "- ep = le plus possible, a priori une ou plusieurs centaines\n",
-    "- w = 4\n",
-    "- lr = 0.02 \n",
-    "\n",
-    "\n",
-    "\n"
+    "- **dim = 100** (résultat proche de dim = 300 mais plus rapide à tourner) \n",
+    "- **ep = le plus possible**  (a priori une ou plusieurs centaines)\n",
+    "- **w = 4** (taille moyenne pour capter tous les types de proximité)\n",
+    "- **lr = 0.02** (meilleur que 0.01 dans l'ensemble des premières simulations et proche des autres lr dans le test comparant à davantage de lr)\n"
    ]
   }
  ],
