--- a/Redaction/Rapport_Final/Brouillons/Kim/grand deux/grand_deux.tex
+++ b/Redaction/Rapport_Final/Brouillons/Kim/grand deux/grand_deux.tex
@@ -158,9 +158,9 @@ $ d_{e}(\vec{u},\vec{v}) = \left\| \frac{\vec{u}}{\left\| \vec{u} \right\|_2} - 
 La similarité cosinus correspond au produit scalaire entre les deux vecteurs normalisés. Elle mesure ainsi l'angle formé entre deux vecteurs-mots.
 
 C'est la distance que de nombreux papiers fondateurs de la méthode \emph{Word2Vec} (comme \cite{Mikolov} ou \cite{Levy}) utilisent avec l'argument selon lequel les mots apparaissant dans des contextes similaires sont groupés dans la même direction durant l'entraînement. 
-Une similarité est proche de +1 si deux mots sont positivement reliés (proches), de -1 s'ils sont négativements reliés (éloignés) et de 0 s'ils ne sont pas "reliés". 
+Une similarité est proche de +1 si deux mots sont positivement reliés (proches), de -1 s'ils sont négativements reliés (éloignés) et de 0 s'ils ne sont pas \og reliés \fg. 
 
-Il est toutefois délicat d'interpréter une similarité proche de -1. On pourrait intuitivement penser à des antonymes, comme "grand" et "petit", mais dans les faits, les antonymes sont susceptibles d'apparaître dans des contextes semblables et sont donc bien souvent positivement corrélés. 
+Il est toutefois délicat d'interpréter une similarité proche de -1. On pourrait intuitivement penser à des antonymes, comme \og grand \fg et \og petit \fg, mais en pratique, les antonymes sont susceptibles d'apparaître dans des contextes semblables et sont donc bien souvent positivement corrélés. 
 
  
 \end{itemize}
@@ -191,7 +191,7 @@ et réduisons les colonnes de notre matrice de données. On notera par la
 suite \(Z = (z_{ij})\) la matrice des données centrées et réduites.
 
 La construction des axes de l'ACP est faite par projection orthogonale.
-Nous utilisons ici le produit scalaire \(<x,y> = x\,^t N y\) avec la
+Nous utilisons ici le produit scalaire \(<x,y>_{N} = x\,^t N y\) avec la
 métrique \(N = diag(\frac{1}{n},...,\frac{1}{n})\). Ainsi, la projection
 orthogonale d'un individu i (vecteur ligne) \(z_i\) sur une droite de
 vecteur directeur \(v\) vaut \(^tz_iv\) et les coordonnées de projection
@@ -202,26 +202,29 @@ dispersion du nuage (son inertie) des individus projetés et conserver
 ainsi au mieux les distances entre les individus. L'inertie se définit
 comme
 
-\[I(Z) = \frac{1}{n} \sum \limits_{i = 1}^n d^2(z_i,\bar{z}) = \sum \limits_{i = 1}^n var(z^j) = p\]
+\[I(Z) = \frac{1}{n} \sum \limits_{i = 1}^n d_{e}^2(z_i,\bar{z}) = \sum \limits_{i = 1}^n var(z^j) = p\]
 
-avec \(d(z_i,z_{i'})\) la distance euclidienne entre deux individus
+avec \(d_{e}(z_i,z_{i'})\) la distance euclidienne entre deux individus
 \(z_i\) et \(z_{i'}\) :
-\(d(z_i,z_{i'}) = \sum \limits_{j=1}^p (z_{ij} - z_{i'j})^2\)\footnote{Nous
+\(d_{e}(z_i,z_{i'}) = \sum \limits_{j=1}^p (z_{ij} - z_{i'j})^2\)\footnote{Nous
   travaillons ici dans le cadre d'une ACP normée où la matrice \(X\) a
   été centrée puis réduite. La réduction de \(X\) a modifié les
   distances initiales entre individus
-  (\(d(z_i,z_{i'}) \neq d(x_i,x_{i'})\)). Cela n'aurait pas été le cas
-  si la matrice \(Y\) avait été uniquement centrée (ACP non normée).}.
+  (\(d_{e}(z_i,z_{i'}) \neq d_{e}(x_i,x_{i'})\)). Cela n'aurait pas été
+  le cas si la matrice \(Y\) avait été uniquement centrée (ACP non
+  normée).}.
 
 On trouve tout d'abord le vecteur directeur \(v_1\) qui orientera le
 premier axe de l'ACP grâce au programme suivant :
-\[v_1 =\underset{ \left\| v  \right\| = 1}{\mathrm{argmin~}} Var(Zv) =\underset{ \left\| v  \right\| = 1}{\mathrm{argmin~}} v\,^t R v \]
+\[v_1 =\underset{\Vert v \Vert = 1}{\mathrm{argmax~}} Var(Zv) =\underset{\Vert v \Vert = 1}{\mathrm{argmax~}} v\,^t R v \]
 où \(R = Var(Z) = \frac{1}{n} Z\,^t Z\) est la matrice des corrélations
-entre les p variables.
+entre les p variables. La norme du vecteur \(v\) se calcule dans ce
+nouvel espace comme
+\(\Vert v \Vert = \sqrt{<v,v>} = v ^tv =\sqrt{ \sum \limits_{i = 1}^p v_i^2}\)
 
 Puis, on choisit \(v_2\) orthogonal à \(v_1\) tel que l'inertie soit
 toujours maximisée
-\[v_2 =\underset{ \left\| v  \right\| = 1, v \perp v_1}{\mathrm{argmin}} Var(Zv) \]
+\[v_2 =\underset{ \Vert v \Vert = 1,\,v \perp v_1}{\mathrm{argmax}}\;  Var(Zv) \]
 En procédant de manière séquentielle, on obtient \(q < r\) axes
 orthogonaux avec \(r = rg(Z)\) et \(q\) choisi par le
 statisticien\footnote{Différentes méthodes existent afin de déterminer
@@ -269,55 +272,93 @@ philosophie demeure cependant identique : représenter dans un espace à
 dimension réduite notre nuage de points de manière à repérer les mots
 proches.
 
-La première étape de l'algorithme consiste en la transformation des
-distances euclidiennes entre les vecteurs \((X_1,...,X_n)\) en
-probabilités conditionnelles qui représenteront également les
-similarités entre nos vecteurs. Pour cela, on note :
+La première étape de l'algorithme consiste à calculer les similarités
+entre les \(n\) vecteurs-mots \((x_i)_{i=1...n}\). La similarité entre
+\(x_i\) et \(x_j\) se mesure comme étant la probabilité conditionnelle
+\(p_{j|i}\) de choisir \(x_j\) comme voisin de \(x_i\), si les voisins
+étaient tirés au sort selon une loi
+\(\mathcal{N}(x_i, \sigma_i)\)\footnote{\(\sigma_i\) doit être calculé
+  de manière à adapter la loi conditionnelle aux données. Une faible
+  dispersion autour de \(x_i\) entraînera un \(\sigma_i\) faible et
+  réciproquement. Il s'agit de trouver le \(\sigma_i\) qui minimise ce
+  qui est appelé en théorie de l'information la \og perplexité \fg,
+  c'est-à-dire un indicateur qui décrit à quel point une distribution de
+  probabilité réussit à prédire un échantillon.}
 
-\[ p_{j|i} = \frac{\exp{-\frac{\left\| \vec{X_i} - \vec{X_j}  \right\|^2}{2\sigma_i^2}}}{\sum_{k \neq i}{\exp{-\frac{\left\| \vec{X_i} - \vec{X_k}  \right\|^2}{2\sigma_i^2}}}}\]
+\[ p_{j|i} = \frac{\exp({-\frac{(d_e(x_i - x_j))^2}{2\sigma_i^2})}}{\sum_{k \neq i}{\exp({-\frac{(d_e(x_i - x_k))^2}{2\sigma_i^2})}}}\]
 
-La similarité entre les points \(X_i\) et \(X_j\) correspond à la
-probabilité conditionnelle que \(X_i\) choisirait \(X_j\) comme voisin
-si ces derniers étaient choisis selon une loi gaussienne centrée en
-\(X_i\). Ici, \(\sigma_i\) est la variance de cette gaussienne centrée
-en \(X_i\), calculer de manière itérative de sorte à maximiser la
-perplexité du modèle (mesure du modèle de probabilités).
+La seconde étape de l'algorithme consiste à trouver le nouvel espace de
+projection à faible nombre de dimensions. On appellera \(g_i\) les
+\(x_i\) projetés dans cet espace que l'on cherche à déterminer. De la
+même manière que précédemment, on exprime des probabilité
+conditionnelles \(q_{j|i}\) en fonction des \(g_i\) mais qui suivent
+cette fois-ci une distribution de \emph{Student} - d'où le nom de
+l'algorithme - plutôt qu'une loi gaussienne\footnote{Dans un espace à
+  faible dimension, la dispersion des vecteurs est réduite. La
+  distribution de Student possède des queues plus épaisses que la loi
+  normale, ce qui permet de mieux différencier les vecteurs distants des
+  vecteurs similaires.}.
 
-Dans une seconde étape, il faut réaliser les mêmes calculs mais dans
-l'espace de projection, où nous aurons nos points \((Y_1,..., Y_n)\).
-Cependant, puisqu'en dimension réduite, la gaussienne à tendance à
-concentrer les points, l'algorithme propose d'utilise une distribution
-de \emph{Student}, d'où le nom de l'algorithme, et ainsi de calculer :
+\[ q_{j|i} = \frac{(1+ (d_e(g_i - g_j))^2)^{-1}}{\sum_{k \neq i}{(1+ (d_e(g_i - g_k))^2)^{-1}}}\]
 
-\[ q_{j|i} = \frac{(1+\left\| \vec{Y_i} - \vec{Y_j}  \right\|^2)^{-1}}{\sum_{k \neq i}{(1+\left\| \vec{Y_i} - \vec{Y_k}  \right\|^2)^{-1}}}\]
+Afin d'obtenir les \(g_i\), on minimise, par descente de gradient, la
+divergence de Kullback--Leibler entre les distributions de probabilité P
+et Q :
 
-Il ne reste plus désormais qu'à déterminer les vecteurs
-\((Y_1,...,Y_n)\) qui minimise l'écart entre les deux distributions de
-probabilité. Pour cela, l'algorithme se base sur la divergence de
-Kullback--Leibler entre les distributions P et Q :
+\[KL(P,Q) = \sum_{i \neq j} { p_{ij} \log{\frac{p_{ij}}{q_{ij}}}} \qquad\text{avec}\qquad p_{ij} = \frac{p_{i|j} + p_{j|i}}{2n}\]
 
-\[KL(P,Q) = \sum_{i \neq j} { p_{ij} \log{\frac{p_{ij}}{q_{ij}}}}\]
-
-Avec \[p_{ij} = \frac{p_{i|j} + p_{j|i}}{2n}\] où \(n\) est le nombre de
-vecteurs.
-
-Ensuite, on minimise grâce à une descente de gradient. On obtient alors
-les résultats de l'algorithme t-SNE, qu'il faut cependant analyser avec
-précaution : il ne s'agît pas d'un algorithme linéaire équivalent à
-l'ACP, on ne peut donc pas interpréter directement des éléments tels que
-la taille des clusters obtenus ou leur distance relative.
+Comme dans l'algorithme de l'ACP, l'algorithme de t-SNE nous permet
+d'obtenir une nouvelle projection des \(x_i\). Il faut cependant
+analyser avec précaution ses résultats. L'algorithme n'étant pas
+linéaire, l'interprétation de la taille des \emph{clusters} obtenus ou
+de la distance qui les sépare n'est alors pas directe.
 
 \hypertarget{human-judgement}{%
 \subsubsection{Human judgement}\label{human-judgement}}
 
-We evaluated the word representations on four dataset, covering word
-similarity and relational analogy tasks. We used two datasets to
-evaluate pairwise word similarity: Finkelstein et al.'s WordSim353
-{[}13{]} and Bruni et al.'s MEN {[}4{]}. These datasets contain word
-pairs together with human-assigned similarity scores. The word vectors
-are evaluated by ranking the pairs according to their cosine
-similarities, and measuring the correlation (Spearman's ) with the human
-ratings.
+Les \emph{word-embedding} obtenus par \emph{Word2Vec} sont censés
+regrouper les mots qui apparaissent dans un contexte similaire. Une
+dernière façon de le vérifier peut être de comparer les résultats
+obtenus au point de vue des êtres humains sur la proximité qu'il peut y
+avoir entre différentes paires de mots.
+
+Pour ce faire, nous utilisons une base de données d'une soixantaine de
+paires de mots auxquelles sont associés des scores de similarité allant
+de 0 (aucun lien entre les mots) à 4 (mots identiques).
+
+\begin{tabular}{|c|c|c|}
+    \hline
+    mot 1 & mot 2 & similarité  \tabularnewline
+    \hline
+    corde & sourire & 0,00   \tabularnewline
+    midi & ficelle & 0,00   \tabularnewline
+    \dots & \dots & \dots   \tabularnewline
+    corde & ficelle & 3,33   \tabularnewline
+    \dots & \dots & \dots   \tabularnewline
+    automobile & auto & 3,94   \tabularnewline
+    coq & coq & 4,00   \tabularnewline
+    \hline
+ \end{tabular}
+
+Nous calculons ensuite la corrélation de Spearman entre les similarités
+cosinus de ces différentes paires issues de notre modèle (notées ici
+\((X_i)_{i=1..n}\)) et les scores proposés ci-dessus par des êtres
+humains (notés ici \((Y_i)_{i=1..n}\)).
+
+La corrélation de Spearman est égale au coefficient de corrélation de
+Pearson calculé sur les variables de rang. \[
+r_s = \mathrm{corr}(\mathrm{rg}_X, \mathrm{rg}_Y) = 
+\frac{\mathrm{cov}(\mathrm{rg}_X, \mathrm{rg}_Y)}{
+\sigma_{\mathrm{rg}_X} \sigma_{\mathrm{rg}_Y}
+}
+\] La variable de rang \(\mathrm{rg}_{X_i}\) est définie telle que
+\(\mathrm{rg}_{X_i}=j \iff X_i = X_{(j)}\) (\(X_i\) est la \(j\)ème plus
+petite variable).
+
+Pour tester la significativité de ce coefficient, nous réalisons un test
+de Student avec
+
+\[t = r\sqrt{\frac{n-2}{1-r^2}}\overset{H_0}{\sim} St(n-2)\]
 
 \hypertarget{choix-des-meilleurs-paramuxe8tres-pour-le-moduxe8le}{%
 \subsection{Choix des « meilleurs » paramètres pour le
