màj modèles : opérations mots (new), correction et amélioration acp+tsne

--- a/Code/2B - Lancement_modele_gensim.ipynb
+++ b/Code/2B - Lancement_modele_gensim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,9 @@
     "seeds = [1, 5, 10, 15, 20, 25]\n",
     "\n",
     "# renseigner dans l'ordre : dim, epoch, window, learning_rate\n",
-    "simuls = [(20,10,3,0.01),(50,10,3,0.01)]\n",
+    "#simuls = [(100,100,4,0.02),(50,10,3,0.01)]\n",
+    "simuls = [(100,80,4,0.02)]\n",
+    "#dim = 100 / ep = 100 / w = 4 / lr = 0.02\n",
     "\n",
     "# Rq : numero_simulation n'est plus utilisé désormais ! "
    ]
@@ -111,18 +113,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "seed 1 à 17:52 : 0.11\n",
-      "seed 5 à 17:52 : 0.11\n",
-      "seed 10 à 17:52 : 0.12\n",
-      "seed 15 à 17:52 : 0.12\n",
-      "seed 20 à 17:53 : 0.13\n",
-      "seed 25 à 17:53 : 0.12\n",
-      "seed 1 à 17:53 : 0.12\n",
-      "seed 5 à 17:53 : 0.12\n",
-      "seed 10 à 17:53 : 0.12\n",
-      "seed 15 à 17:53 : 0.13\n",
-      "seed 20 à 17:53 : 0.12\n",
-      "seed 25 à 17:53 : 0.12\n"
+      "seed 1 à 1:36 : 1.15\n",
+      "seed 5 à 1:38 : 1.26\n",
+      "seed 10 à 1:39 : 1.29\n",
+      "seed 15 à 1:40 : 1.27\n",
+      "seed 20 à 1:41 : 1.04\n",
+      "seed 25 à 1:42 : 1.08\n"
      ]
     }
    ],
